--- a/pom.xml
+++ b/pom.xml
@@ -201,10 +201,12 @@
 		
 		<!--  Hibernate -->
 		<dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>ojdbc6</artifactId>
-            <version>11.1.0.7.0</version>
-        </dependency>
+  			<groupId>com.oracl</groupId>
+  			<artifactId>ojdbc6</artifactId>
+  			<version>11.1.0.7.0</version>
+  			<scope>system</scope>
+  			<systemPath>${basedir}/lib/ojdbc6-11.1.0.7.0.jar</systemPath>
+		</dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
