--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
 		<maven.compiler.source>1.6</maven.compiler.source>
 		<maven.compiler.target>1.6</maven.compiler.target>
 		<java-version>1.6</java-version>
-		<org.springframework-version>3.1.0.RELEASE</org.springframework-version>
+<!-- 		<org.springframework-version>3.1.0.RELEASE</org.springframework-version> -->
+		<org.springframework-version>4.0.6.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.9</org.aspectj-version>
 		<org.slf4j-version>1.5.10</org.slf4j-version>
 		<hibernate.version>4.1.9.Final</hibernate.version>
@@ -63,7 +64,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>${org.springframework-version}</version>
+			<version>org.springframework-version</version>
 			<exclusions>
 				<!-- Exclude Commons Logging in favor of SLF4j -->
 				<exclusion>
@@ -201,7 +202,7 @@
 		
 		<!--  Hibernate -->
 		<dependency>
-  			<groupId>com.oracl</groupId>
+  			<groupId>com.oracle</groupId>
   			<artifactId>ojdbc6</artifactId>
   			<version>11.1.0.7.0</version>
   			<scope>system</scope>
