--- a/pom.xml
+++ b/pom.xml
@@ -351,7 +351,7 @@
 						<version>2.1.1</version>
 						<configuration>
 							<outputDirectory>webapps</outputDirectory>
-							<warName>ROOT</warName>
+							<warName>scheduling</warName>
 						</configuration>
 					</plugin>
 				</plugins>
